# platform.core.api.mtp

./: CMakeLists.txt  capi-network-mtp.pc.in
doc/: mtp_doc.h
include/: mtp.h  mtp_db.h  mtp_debug.h  mtp_gdbus.h  mtp_gdbus_deviceinfo.h  mtp_gdbus_manager.h  mtp_gdbus_objectinfo.h  mtp_gdbus_storageinfo.h  mtp_internal.h  mtp_private.h
packaging/: capi-network-mtp.spec
src/: mtp.c  mtp_db.c  mtp_gdbus_deviceinfo.c  mtp_gdbus_manager.c  mtp_gdbus_objectinfo.c  mtp_gdbus_storageinfo.c  mtp_gdbuslib.xml
test/: CMakeLists.txt  mtp_unit_test.c
